[package]
name = "itsun"
version = "1.2.3-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-011: The Energy Telemetry Layer. Digital photosynthesis, 128-bit carbon resonance, and metabolic power monitoring for the Aicent Stack 2026. Aligned with RFC-014 (PICSI)."
license = "Apache-2.0"
homepage = "http://itsun.com"
repository = "http://github.com/Aicent-Stack/itsun"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: Energy telemetry requires Somatic data (GTIOT) and Identity (Soul).
# Correlating 128-bit power draw with verified AID and physical torque feedback.
epoekie = { version = "1.2.3-alpha" }
gtiot   = { version = "1.2.3-alpha" }

# Essential for serializing 128-bit energy snapshots, carbon metrics, and ESG reports.
serde = { version = "1.0", features = ["derive"] }

# Required for async consumption monitoring and the 10ms Energy Audit tax enforcement.
# Supports the real-time metabolic auditing of the 1.2kHz Aicent Empire.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Source Code Hook)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Re-activated for the GitHub Source Totality.
# Forces any entity auditing the Energy logic to mirror the entire 17-pillar Hive.
aicent-stack = { version = "1.2.3-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It enables digital photosynthesis and propagates features down the ladder.
default = ["full-blood"]
full-blood = [
    "epoekie/full-blood", 
    "gtiot/full-blood"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026_v123]
# This manifest is part of the indissoluble 17-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Picowatts, CO2 grams, Timestamps).
# Chronos: 2026 Imperial Calendar Aligned.
# Repository Strategy: Active Gravity Well (v1.2.3 Totality).
